# agme-case-parser

./: .gitignore  .gitmodules  CHROME_EXTENSION_FORMAT.md  CLAUDE.md  LICENSE  README.md  USER_GUIDE.md  WEB_FORM_INTEGRATION_PLAN.md  batch_process.py  biome.json  debug_categorization.py  main.py  mise.toml  package.json  prek.toml  pyproject.toml  ruff.toml  sort-logs.py  sort_logs.py  validation_report.txt
.claude/hooks/: post-tool-call.py
.github/: dependabot.yml
.github/workflows/: chrome-extension-release.yml  python-tests.yml
chrome-extension/: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  README.md  SETTINGS.md  build.js  content.js  manifest.json  package.json  popup.html  tailwind.config.js  vite.config.js
chrome-extension/icons/: ICONS_README.md
chrome-extension/public/: xlsx.min.js
chrome-extension/src/: popup.css
chrome-extension/src/content/: content.js
chrome-extension/src/popup/: acgme.js  app.js  confirmation.js  constants.js  excel.js  form.js  index.html  navigation.js  popup.css  settings.js  state.js  storage.js  ui.js
ml_training/: README.md  __init__.py  airway_review.py  auto_train.py  batch_prepare.py  evaluate.py  train_optimized.py  utils.py  workbench.py
src/case_parser/: __init__.py  cli.py  csv_io.py  domain.py  enhanced_extractors.py  enhanced_processor.py  exceptions.py  export_service.py  extractors.py  io.py  logging_config.py  models.py  processor.py  processors.py  typescript_generator.py  validation.py
src/case_parser/ml/: __init__.py  config.py  features.py  hybrid.py  inputs.py  loader.py  predictor.py
src/case_parser/patterns/: __init__.py  airway_patterns.py  anesthesia_patterns.py  approach_patterns.py  block_site_patterns.py  categorization.py  extraction_utils.py  procedure_patterns.py
tests/: __init__.py  test_batch_process.py  test_block_site_patterns.py  test_categorization.py  test_cli.py  test_csv_io.py  test_domain.py  test_enhanced_extractors.py  test_enhanced_processor.py  test_io.py  test_ml_airway_review.py  test_ml_auto_train.py  test_ml_batch_prepare.py  test_ml_evaluate.py  test_ml_features.py  test_ml_inputs.py  test_ml_predictor.py  test_ml_train_optimized.py  test_ml_workbench.py  test_validation.py
