[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "case-parser"
version = "0.2.0"
description = "A tool for processing anesthesia case data from Excel files and converting it to standardized case log format"
readme = "README.md"
license = { text = "Apache License 2.0" }
authors = [ { name = "Razvan Azamfirei", email = "razvan@azamfirei.dev" } ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "numpy>=2.4.2",
  "openpyxl>=3.1.5",
  "pandas>=3.0.1",
  "pydantic>=2.12.5",
  "rich>=14.3.3",
  "scikit-learn>=1.6",
  "scipy>=1.17.1",
]
scripts.case-parser = "case_parser.cli:main"

[dependency-groups]
dev = [
  "pandas-stubs~=3.0.0",
  "pytest>=9.0.2",
  "pytest-cov>=6.1.1",
  "ruff>=0.15.4",
  "scipy-stubs>=1.17",
  "ty>=0.0.20",
  "types-pytz>=2025.2.0.20251108",
]
ml = [
  "textual>=8.0.1",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/case_parser" ]

[tool.uv]
default-groups = "all"

[tool.pytest.ini_options]
addopts = "--cov=case_parser --cov-report=term-missing --cov-report=xml:coverage.xml --junitxml=junit.xml -o junit_family=legacy"
testpaths = [ "tests" ]

[tool.coverage]
run.branch = true
run.source = [ "case_parser" ]
report.show_missing = true
report.skip_covered = true
xml.output = "coverage.xml"

[tool.ty]
environment.python-version = "3.12"
